@@ -1,3 +1,8 @@
+2008-02-20  Matthias Clasen  <mclasen@redhat.com>
+
+	* clock-location.c (clock_location_get_offset): Take daylight
+	savings time into account.
+
 2008-02-18  Matthias Clasen  <mclasen@redhat.com>
 
 	Set timezones asynchronously. This keeps the clock ticking
